# Remember

./: .gitignore  AGENTS.md  PROJECT_GOALS.md  README.md  README_en.md  ROADMAP.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: windows-ci.yml
docs/superpowers/plans/: 2026-06-28-remaining-review-fixes.md  2026-06-29-remember-implementation.md  2026-06-30-input-capture-integration.md
docs/superpowers/specs/: 2026-06-29-remember-design.md
scripts/: sign-release-artifacts.ps1  sign-windows-artifact.ps1  verify-release-signature.ps1
src/: App.test.tsx  App.tsx  flowEditing.test.ts  flowEditing.ts  flowOptions.test.ts  flowOptions.ts  flowTiming.test.ts  flowTiming.ts  localization.ts  runLog.test.ts  runLog.ts  styles.css  tauriApi.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  clock.rs  commands.rs  hotkeys.rs  input.rs  keyboard.rs  lib.rs  main.rs  model.rs  mouse.rs  playback_input.rs  player.rs  recorder.rs  storage.rs  tray.rs  windows.rs
src-tauri/tests/: app_state.rs  hotkeys.rs  model_storage.rs  player.rs  recorder.rs  smoke.rs  storage.rs
src/components/: ControlWindow.tsx  Controls.tsx  HotkeyPanel.tsx  PlaybackSettings.tsx  RecordingList.tsx  StatusPanel.tsx  WindowTitlebar.tsx  WorkbenchWindow.tsx
src/data/: sampleFlow.ts
src/lib/: hotkeys.test.ts  hotkeys.ts  rememberApi.test.ts  rememberApi.ts  sounds.test.ts  sounds.ts
