[package]
name = "remember"
version = "0.1.0"
description = "Portable Windows macro recorder"
edition = "2021"

[lib]
name = "remember_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "remember"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
thiserror = "1"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
